Resync all skill snapshots with multi-page assembly
Regenerates references/snapshots/* and MANIFEST.md across all 56 skills
using the new multi-page assembly fallback. Guides that previously
captured only the first page now include up to 20 assembled pages,
dramatically expanding offline coverage.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>